--- a/src/app/auth/layout/layout.component.scss
+++ b/src/app/auth/layout/layout.component.scss
@@ -3,6 +3,7 @@
     display: flex;
     justify-content: center;
     align-items: flex-start;
+    background-color: rgb(223, 221, 240);
     mat-card {
         width: 500px;
         margin-top: 24vh;
