--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,29 +1,36 @@
 <app-layout>
-        <form ngForm #loginForm="ngForm" (ngSubmit)="onSubmit(loginForm)">
-            <mat-form-field class="fullWidth">
-                <input matInput ngModel #userName="ngModel" type="text" minlength="6" required
-                    name="userName" placeholder="Username">
+        <form ngForm #loginForm="ngForm" autocomplete="off" (ngSubmit)="onLogin(loginForm)">
+            
+            <mat-form-field class="fullWidth" appearance="standard">
+                <input matInput ngModel #userName="ngModel" type="text" required name="username" placeholder="Username">
             </mat-form-field> 
             <div *ngIf="userName.touched">
                 <mat-error *ngIf="userName.hasError('required')">
                     Username is required.
                 </mat-error>
-                <mat-error *ngIf="userName.hasError('minlength')">
-                    Username is must have atleast 6 charecters.
-                </mat-error>
             </div>
-            <mat-form-field class="fullWidth">
-                <input matInput name="password" type="password" ngModel #password="ngModel" required
+
+            <mat-form-field class="fullWidth" appearance="standard">
+                <input matInput name="password" [type]="hidePassword ? 'password' : 'text'" ngModel #password="ngModel" required
                 placeholder="Password">
+                <button mat-icon-button matSuffix (click)="hidePassword = !hidePassword" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hidePassword">
+                    <mat-icon>{{hidePassword ? 'visibility_off' : 'visibility'}}</mat-icon>
+                </button>
             </mat-form-field>
             <div *ngIf="password.touched">
                 <mat-error *ngIf="password.hasError('required')">
                     Password is required.
                 </mat-error>
             </div>
+
             <p class="sign-up">
                 Create an account? <a class="link" routerLink="/signup">Sign up</a>
             </p>
             <button mat-raised-button color="primary">Login</button>
         </form>
+
+        <!-- {{ 'Value: ' + valueFromService }}
+        <button mat-raised-button color="primary" (click)="setValue()">Set Value</button>
+        <button mat-raised-button color="primary" (click)="getValue()">Get Value</button> -->
+
 </app-layout>
