Create pages contact and transfer

--- a/src/app/core/navbar/navbar.component.html
+++ b/src/app/core/navbar/navbar.component.html
@@ -1,8 +1,11 @@
 <div class="container">
-  <p>
-    <mat-toolbar color="primary">
-      <span>Money Manager</span>
-    </mat-toolbar>
-  </p>
+  <mat-toolbar color="primary">
+    <span>Money Manager</span>
+  </mat-toolbar>
+
+
+  <div class="contents">
+    <router-outlet></router-outlet>
+  </div>
 </div>
 
