--- a/src/app/core/pages/contacts/contacts.component.scss
+++ b/src/app/core/pages/contacts/contacts.component.scss
@@ -1,39 +1,25 @@
-.contact {
-    border-bottom: 1px solid #673ab7;
+.container {
     display: flex;
-    align-items: center;
-    padding: 10px 0;
-    .info {
-        text-align: center;
-        flex-grow: 1.5;
-        min-width: 250px;
-        .name {
-            font-weight: 500px;
-            font-size: 18px;
+    flex-direction: column;
+    height: 100%;
+    .header {
+        margin: 16px;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        h1 {
+            margin: 0;
+            color: #3f51b5;
         }
-        .updatedOn {
-            color: #aaa;
-            font-size: 12px;
-        }
+       button {
+           padding-top: 8px;
+           padding-bottom: 8px;
+           background-color: #d87093;
+           color: white;
+       }
     }
-   .email {
-        text-align: center;
+    .contacts {
         flex-grow: 1;
-        min-width: 200px;
-        margin-right: 16px;
-        border: 1px solid #d87093;
-        padding: 8px 16px;
-        border-radius: 24px;
-    }
-    .summary {
-        text-align: center;
-        flex-grow: 1;
-        font-weight: 600;
-        .youOwe {
-            color: #d87093;
-        }
-        .oweYou {
-            color: #9b48bb;
-        }
+        background-color: white;
     }
 }
