--- a/src/app/core/pages/contacts/contacts.component.html
+++ b/src/app/core/pages/contacts/contacts.component.html
@@ -1,7 +1,7 @@
 <div class="container">
     <div class="header">
         <h1>Contacts</h1>
-        <button mat-raised-button>Create Contacts</button>
+        <button mat-raised-button routerLink="/new-contact">Create Contacts</button>
     </div>
     <div class="contacts">
         <app-contact [contactToDisplay]="contact" *ngFor="let contact of contacts"></app-contact>
