Finish Delete Contact

--- a/src/app/core/pages/contacts/contact/contact.component.html
+++ b/src/app/core/pages/contacts/contact/contact.component.html
@@ -16,6 +16,6 @@
         </div>
     </div>
     <div class="buttons">
-        <crud-buttons (view)="onCaptureEvent($event)"></crud-buttons>
+        <crud-buttons [hideAddIcon]="true" (view)="onCaptureEvent($event)"></crud-buttons>
     </div>
 </div>
