--- a/src/app/core/pages/contacts/contact-view/contact-view.component.scss
+++ b/src/app/core/pages/contacts/contact-view/contact-view.component.scss
@@ -1,3 +1,5 @@
+@import '../../../../../color';
+
 .container {
     display: flex;
     flex-direction: column;
@@ -7,7 +9,7 @@
         align-items: center;
         margin: 16px 0;
         padding-bottom: 16px;
-        border-bottom: 2px solid #3f51b5;
+        border-bottom: 2px solid $primary-color;
         .general-info {
             display: flex;
             align-items: center;
@@ -26,7 +28,7 @@
                 }
                 .date {
                     font-size: 12px;
-                    color: gray;
+                    color: $gray;
                 }
                 .email {
                     font-size: 16px;
@@ -39,13 +41,13 @@
             margin-right: 16px;
             .youOwe {
                 .amount {
-                    color: #d87093;
+                    color: $pink;
                 }
             }
 
             .oweYou {
                 .amount {
-                    color: #3f51b5;
+                    color: $primary-color;
                 }
             }
         }
