--- a/src/app/core/pages/contacts/contact/contact.component.scss
+++ b/src/app/core/pages/contacts/contact/contact.component.scss
@@ -3,7 +3,8 @@
     display: flex;
     align-items: center;
     padding: 10px 0;
-
+    text-decoration: none;
+    color: black;
     .image {
         margin-right: 16px;
         img {
