Create add Icon button for contact-view

--- a/src/app/core/pages/contacts/contact-view/contact-view.component.html
+++ b/src/app/core/pages/contacts/contact-view/contact-view.component.html
@@ -25,7 +25,9 @@
             </div>
         </div>
         <div class="buttons">
-            <crud-buttons [hideViewIcon]="true" [hideDeleteIcon]="true" [hideEditIcon]="true"></crud-buttons>
+            <button mat-fab style="background-color: #d87093;">
+              <mat-icon>add</mat-icon>
+            </button>
         </div>
     </div>
     <div class="transactions">
