--- a/src/app/core/pages/contacts/contact-view/contact-view.component.scss
+++ b/src/app/core/pages/contacts/contact-view/contact-view.component.scss
@@ -53,7 +53,8 @@
         }
 
         .buttons {
-            margin-left: 32px;
+            margin-left: auto;
+            margin-right: 16px;
         }
     }
 }
