--- a/src/app/core/navbar/navbar.component.html
+++ b/src/app/core/navbar/navbar.component.html
@@ -6,6 +6,15 @@
       <div class="links">
         <a class="link" *ngFor="let link of links" [routerLink]="link.path" routerLinkActive="active">{{ link.name }}</a>
       </div>
+      
+      <div class="user-details" [matMenuTriggerFor]="menu">
+        <div class="username">{{ userName }}</div>
+        <mat-icon>arrow_drop_down</mat-icon>
+      </div>
+      <mat-menu #menu="matMenu">
+        <button mat-menu-item routerLink="/settings">Setting</button>
+        <button mat-menu-item>Logout</button>
+      </mat-menu>
     </div>
   </mat-toolbar>
 
