Implement store pattern for user account

--- a/src/app/core/navbar/navbar.component.html
+++ b/src/app/core/navbar/navbar.component.html
@@ -8,7 +8,7 @@
       </div>
       
       <div class="user-details" [matMenuTriggerFor]="menu">
-        <div class="username">{{ userName }}</div>
+        <div class="username">{{ username }}</div>
         <mat-icon>arrow_drop_down</mat-icon>
       </div>
       <mat-menu #menu="matMenu">
