Use char pipe in navbar

--- a/src/app/core/navbar/navbar.component.html
+++ b/src/app/core/navbar/navbar.component.html
@@ -8,6 +8,7 @@
       </div>
       
       <div class="user-details" [matMenuTriggerFor]="menu">
+        <div class="user-badge">{{ username | charprofile}}</div>
         <div class="username">{{ username }}</div>
         <mat-icon>arrow_drop_down</mat-icon>
       </div>
