--- a/src/app/core/pages/contacts/contact-view/contact-view.component.scss
+++ b/src/app/core/pages/contacts/contact-view/contact-view.component.scss
@@ -37,8 +37,19 @@
         }
     
         .transaction-info {
-            margin-left: auto;
-            margin-right: 16px;
+            margin-left: 32px;
+            // margin-right: 16px;
+            .youOwe, .oweYou {
+                .text {
+                    font-weight: 400;
+                    font-size: 16px;
+                }
+
+                .amount {
+                    font-weight: 500;
+                }
+            }
+
             .youOwe {
                 .amount {
                     color: $pink;
@@ -56,5 +67,10 @@
             margin-left: auto;
             margin-right: 16px;
         }
+    }
+
+    .transactions {
+        flex-grow: 1;
+        overflow-y: auto;
     }
 }
