--- a/src/app/core/pages/contacts/contact/contact.component.scss
+++ b/src/app/core/pages/contacts/contact/contact.component.scss
@@ -30,8 +30,9 @@
     .email {
         text-align: center;
         flex-grow: 1;
-        min-width: 200px;
+        width: 20%;
         margin-right: 16px;
+        margin-left: auto;
         border: 2px solid #d87093;
         padding: 8px 16px;
         border-radius: 24px;
