--- a/src/app/core/pages/contacts/contact-form/contact-form.component.html
+++ b/src/app/core/pages/contacts/contact-form/contact-form.component.html
@@ -28,7 +28,7 @@
         </div>
         <div class="buttons">
             
-            <button mat-raised-button routerLink="/contacts">Close</button>
+            <button mat-raised-button (click)="onClose()">Close</button>
             <button mat-raised-button class="create" type="submit" color="primary">{{ buttonName }}</button>
 
         </div>
