--- a/src/app/core/pages/transactions/transaction/transaction.component.html
+++ b/src/app/core/pages/transactions/transaction/transaction.component.html
@@ -16,5 +16,5 @@
     <div class="transaction-amount">
         <span>{{ txn.amount | currency:'INR' }}</span>
     </div>
-    <crud-buttons [hideAddIcon]="true" [hideViewIcon]="true"></crud-buttons>
+    <crud-buttons [hideAddIcon]="true"></crud-buttons>
 </div>
