Finish update button

--- a/src/app/core/pages/transactions/transaction-form/transaction-form.component.html
+++ b/src/app/core/pages/transactions/transaction-form/transaction-form.component.html
@@ -54,7 +54,7 @@
             <button mat-raised-button class="create" type="submit" color="primary">{{ buttonName }}</button>
         </div>
 
-        {{form.value | json}}
+        <!-- {{form.value | json}} -->
 
     </form>
 </div>
