--- a/src/app/core/pages/contacts/contact-view/contact-view.component.html
+++ b/src/app/core/pages/contacts/contact-view/contact-view.component.html
@@ -26,7 +26,7 @@
         </div>
         <div class="buttons">
             <button mat-fab style="background-color: #d87093;">
-              <mat-icon>add</mat-icon>
+              <mat-icon (click)="onAddTransaction()">add</mat-icon>
             </button>
         </div>
     </div>
