--- a/src/app/core/pages/transactions/transaction/transaction.component.scss
+++ b/src/app/core/pages/transactions/transaction/transaction.component.scss
@@ -9,6 +9,8 @@
     .contact-info {
         width: 25%;
         .name {
+            text-decoration: none;
+            color: black;
             font-size: 16px;
             font-weight: 500;
         }
@@ -46,7 +48,7 @@
     .transaction-amount {
         width: 20%;
         margin-left: auto;
-        margin-right: 32px;
+        margin-right: 18px;
         text-align: right;
         font-weight: 500;
         color: #3f51b5;
