Complete api integration

--- a/src/app/core/pages/contacts/contact-view/contact-view.component.html
+++ b/src/app/core/pages/contacts/contact-view/contact-view.component.html
@@ -37,6 +37,7 @@
             [transaction]="transaction" 
             [isLast]="isLastIteration"
             [hideContactName]= "true"
+            (refresh)="refreshList()"
         ></mm-transaction>
     </div>
 </div>
