--- a/src/app/core/pages/transactions/transaction-form/transaction-form.component.scss
+++ b/src/app/core/pages/transactions/transaction-form/transaction-form.component.scss
@@ -1,6 +1,7 @@
 .container {
     .full-width {
         width: 100%;
+        padding-bottom: 8px;
     }
     .buttons{
         margin-top: 32px;
