finish form alert in transaction form

--- a/src/app/core/pages/contacts/contact-form/contact-form.component.html
+++ b/src/app/core/pages/contacts/contact-form/contact-form.component.html
@@ -27,6 +27,7 @@
             </mat-error>
         </div>
         <div class="buttons">
+            <button mat-raised-button routerLink="/"> Cancel </button>
             <button mat-raised-button class="create" type="submit" color="primary">{{ buttonName }}</button>
         </div>
     </form>
