--- a/src/app/core/pages/transactions/transactions.component.scss
+++ b/src/app/core/pages/transactions/transactions.component.scss
@@ -20,6 +20,8 @@
         align-items: center;
         width: 100%;
         margin-top: 26px;
+        padding-bottom: 16px;
+        border-bottom: 2px solid $primary-color;
         .general-info {
             display: flex;
             align-items: center;
