add disable button to avoid multiple click

--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -26,7 +26,7 @@
             <p class="sign-up">
                 Create an account? <a class="link" routerLink="/signup">Sign up</a>
             </p>
-            <button mat-raised-button color="primary">Login</button>
+            <button mat-raised-button color="primary" [disabled]="disableButton">Login</button>
         </form>
 
         <!-- {{ 'Value: ' + valueFromService }}
