--- a/src/app/auth/signup/signup.component.html
+++ b/src/app/auth/signup/signup.component.html
@@ -1,10 +1,10 @@
 <app-layout>
-    <form [formGroup]="signupForm" (ngSubmit)="onSubmit()">
+    <form [formGroup]="signupForm" (ngSubmit)="onSignUp()">
 
         <mat-form-field class="fullWidth" appearance="standard" aria-autocomplete="off">
             <mat-label>Email</mat-label>
 
-            <input matInput formControlName="email" type="email" name="email" placeholder="Email">
+            <input matInput formControlName="email" required type="email" name="email" placeholder="Email">
         </mat-form-field> 
         <mat-error *ngIf="email.touched">
             <mat-error >{{ getEmailError() }}</mat-error>
@@ -13,16 +13,21 @@
 
         <mat-form-field class="fullWidth" appearance="standard">
             <mat-label>Username</mat-label>
-
-            <input matInput formControlName="userName" type="text" minlength="6" name="userName" placeholder="Username">
-        </mat-form-field> 
-        <mat-error *ngIf="userName.touched">
-            <mat-error>{{ getUsernameError() }}</mat-error>
+            <input formControlName="username" required type="text" matInput placeholder="Username">
+            <button type="button" mat-icon-button matSuffix *ngIf="username.pending">
+                <mat-icon>
+                pending
+                </mat-icon>
+            </button>
+        </mat-form-field>
+        <mat-error *ngIf="username.touched && username.invalid">
+            <span>{{ getUsernameError() }}</span>
         </mat-error>
+
 
         <mat-form-field class="fullWidth" appearance="standard">
             <mat-label>Password</mat-label>
-            <input matInput formControlName="password" [type]="hidePassword ? 'password' : 'text'" name="password" placeholder="Password">
+            <input matInput formControlName="password" required [type]="hidePassword ? 'password' : 'text'" name="password" placeholder="Password">
             <button type="button" mat-icon-button matSuffix (click)="hidePassword = !hidePassword" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hidePassword">
             <mat-icon>{{ hidePassword ? 'visibility_off' : 'visibility'}}</mat-icon>
             </button>
@@ -34,7 +39,7 @@
         <mat-form-field class="fullWidth" appearance="standard">
             <mat-label>Confirm Password</mat-label>
 
-                <input matInput formControlName="confirmPassword" name="confirmPassword" [type]="hideConfirmPassword ? 'password' : 'text'" placeholder="Confirm Password">
+                <input matInput formControlName="confirmPassword" required name="confirmPassword" [type]="hideConfirmPassword ? 'password' : 'text'" placeholder="Confirm Password">
                 <button type="button" mat-icon-button matSuffix (click)="hideConfirmPassword = !hideConfirmPassword" [attr.aria-label]="'Hide Confirm password'" [attr.aria-pressed]="hideConfirmPassword">
                     <mat-icon>{{hideConfirmPassword ? 'visibility_off' : 'visibility'}}</mat-icon>
                 </button>
@@ -47,7 +52,7 @@
             Already have an account? <a class="link" routerLink="/login">Login</a>
         </p>
 
-        <button mat-raised-button color="primary" disabled="signupForm.invalid || disableButton">Sign Up</button>
+        <button mat-raised-button color="primary" [disabled]="signupForm.invalid">Sign Up</button>
     </form>
     <!-- {{ 'Value: ' + valueFromService }}
         <button mat-raised-button color="primary" (click)="setValue()">Set Value</button>
