--- a/src/app/core/navbar/navbar.component.html
+++ b/src/app/core/navbar/navbar.component.html
@@ -8,6 +8,9 @@
       </div>
       
       <div class="user-details" [matMenuTriggerFor]="menu">
+        <!-- <span class="session_time">Time remaining: {{ remainingSessionTime
+        }}</span> -->
+
         <div class="user-badge">{{ username | charprofile}}</div>
         <div class="username">{{ username }}</div>
         <mat-icon>arrow_drop_down</mat-icon>
